--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Boards#show</h1>
-<p>Find me in app/views/boards/show.html.erb</p>
+<%= @board.name %>
+
+<div>
+	<%= link_to image_tag(@board.name+".jpg") %>
+</div>
