--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -4,13 +4,11 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
 	  <div class="instructions">Select a board to begin!</div>
-	  <div class="col-md-6">
-	  	<%= link_to image_tag("img-1.jpg", class: "board-thumbnail"), "#" %>
-	  	<%= link_to image_tag("img-3.jpg", class: "board-thumbnail"), "#" %>
+	  <div>
+		  <% @boards.each do |board| %>
+		  	<%= render board %>
+		  <% end %>
 	  </div>
-	  <div class="col-md-6 menu-col">
-	  	<%= link_to image_tag("img-2.jpg", class: "board-thumbnail"), "#" %>
-	  	<%= link_to image_tag("img-4.jpg", class: "board-thumbnail"), "#" %>
-	  </div>  
+	  <br class="clear">
   </div>
 </div>
