--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,5 +1,10 @@
 <%= @board.name %>
 
 <div>
-	<%= link_to image_tag(@board.name+".jpg") %>
+	<section class="col-md-10">
+		<%= image_tag(@board.name+".jpg", class: "board") %>
+	</section>
+	<aside class="col-md-2">
+		hello
+	</aside>
 </div>
