--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,7 +27,7 @@ h1 {
 /* Forms */
 
 .instructions {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   margin-bottom: 15px; 
 }
 
@@ -81,6 +81,26 @@ input {
 .board {
   width: 100%;
   height: auto;
+}
+
+.character-thumbnail-container {
+  display: block;
+  float: left;
+  width: 46%;
+  height: auto;
+  margin: 2%;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.character-name {
+  text-align: center;
+}
+
+.character-thumbnail {
+  width: 80%;
+  margin-left: 10%;
+  height: 175px;
 }
 
 /* Misc */
