--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,10 @@ input {
 
 /* Boards */
 
+.board-container {
+  position: relative;
+}
+
 .board-thumbnail-container {
   display: block;
   float: left;
