add extra board-container to separate character option box from board-img-container click event

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,10 @@ input {
   position: relative;
 }
 
+.board-img-container {
+  position: relative;
+}
+
 .board-thumbnail-container {
   display: block;
   float: left;
