--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,6 +111,16 @@ input {
   height: 175px;
 }
 
+.close-btn {
+  width: 16px;
+  height: 16px;
+  margin-left: 5px;
+}
+
+.close-btn:hover {
+  cursor: pointer;  
+}
+
 /* Misc */
 
 .clear {
