add post funtion to send score

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', "#{params[:controller]}/#{params[:action]}" if WheresWaldo::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}") %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -18,6 +18,5 @@
 <div class="container">
 	<%= yield %>
 </div>
-
 </body>
 </html>
