--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,11 @@ html {
   font-size: 14px;
 }
 
+body {
+  background-color: #b0e0e6;
+  color: #333;
+}
+
 /* typography */
 
 h1 {
@@ -97,8 +102,8 @@ input {
   width: 46%;
   height: auto;
   margin: 2%;
-  border: 1px solid black;
   border-radius: 5px;
+  background-color: #fff;
 }
 
 .character-name {
