add margin to boards show page

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Board #{@board.id}") %>
 
-<div>
+<div class="main">
 	<section class="col-md-9">
 		<div class="board-container">
 			<div class="board-img-container">
